# OpenEnvv

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  app.py  cmd.txt  final.md  inference.py  issue.md  openenv.md  openenv.yaml  pyproject.toml  requirements.txt  rules.md  update.md  updates.md
agents/: __init__.py  base_agent.py  dummy_agent.py  hf_agent.py
config/: settings.py
data/: answer_keys.json  company_policy.json  forbidden_phrases.txt  tickets_easy.json  tickets_hard.json  tickets_medium.json
graders/: __init__.py  base_grader.py  rewards.py  support_grader.py  support_grader_old.py
scripts/: baseline.py  debug_actions.py  direct_test.py  run_env.py  trace_episode.py  validate_scoring.py
server/: __init__.py  app.py
skills/: SKILLS.md
support_env/: __init__.py  client.py  models.py
support_env/server/: __init__.py  app.py  support_environment.py
tasks/: __init__.py  base_task.py  easy.py  hard.py  medium.py
tests/: __init__.py  conftest.py  test_environment.py  test_graders.py  test_models.py  test_rewards.py
